# fastapi-insta

./: README.md  alembic.ini  docker-compose.yml  log.py  log.txt  pyproject.toml  req.txt
auth/: authentication.py  oauth2.py
migrations/: env.py
src/: _enum.py  main.py
src/db/: database.py
src/models/: articles.py  products.py  users.py
src/routers/: articles.py  blogs.py  files.py  products.py  templates.py  users.py
src/schemas/: article_schema.py  blog_schema.py  product.py  user_schema.py
templates/: product.html
tests/: test_main.py
